[package]
name = "rust-api"
version = "0.1.0"
authors = ["Cleber Santos <santos.cleber@gmail.com>"]
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
env_logger = "0.11.6"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }